--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "chroma-js": "^2.4.2",
     "dayjs": "^1.11.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.0",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
